# strliteral

./: .gitignore  .gitlab-ci.yml  LICENSE  conanfile.py  meson.build  meson_options.txt  strliteral.cpp
.github/workflows/: main.yml
test/: big_random.test  meson.build  random.test  strliteral_test.cpp
